--- a/src/css/welcome.css
+++ b/src/css/welcome.css
@@ -1,3 +1,4 @@
+/* welcome */
 .container-welcome-title {
   font-family: 'Aboreto', sans-serif;
   font-weight: 400;
@@ -40,8 +41,10 @@
   padding-bottom: 10px;
   border-radius: 100px;
   min-height: 44px;
-  box-shadow: 0 1px 2px 0 rgba(11, 8, 3, 0.05),
-    inset 0 -2px 1px 0 rgba(0, 0, 0, 0.2), inset 0 0 0 1px rgba(11, 8, 3, 0.15),
+  box-shadow:
+    0 1px 2px 0 rgba(11, 8, 3, 0.05),
+    inset 0 -2px 1px 0 rgba(0, 0, 0, 0.2),
+    inset 0 0 0 1px rgba(11, 8, 3, 0.15),
     inset 0 2px 1px 0 rgba(255, 255, 255, 0.25),
     inset 0 32px 24px 0 rgba(255, 255, 255, 0.05);
   background-color: #6f4e37;
